# DomeDagen

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.ini  domedagen_root.txt  fisheye_testing.xml
other/batch scripts/: run 6 nodes.bat
scripts/: make build files windows.bat  run client.bat  run windows debug.bat
src/: Utility.hpp  backgroundobject.cpp  backgroundobject.hpp  balljointconstraint.cpp  balljointconstraint.hpp  collectible.cpp  collectible.hpp  collectiblepool.cpp  collectiblepool.hpp  constants.hpp  game.cpp  game.hpp  gameobject.cc  gameobject.cpp  gameobject.h  gameobject.hpp  geometryhandler.hpp  inireader.cpp  inireader.h  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  modelhandler.cpp  modelhandler.hpp  modelmanager.cpp  modelmanager.hpp  player.cc  player.cpp  player.h  player.hpp  renderable.h  renderable.hpp  sceneobject.cpp  sceneobject.hpp  utility.cpp  utility.hpp  websockethandler.cpp  websockethandler.h
src/configs/: fisheye_testing.xml  simple.xml  six_nodes.xml  two_fisheye_nodes.xml  two_nodes.xml
src/models/Background/: background.fbx  backgroundWorks.fbx  mehe.fbx
src/models/Bottle1/: bottle1.fbx
src/models/Bottle2/: bottle2.fbx
src/models/Bottle3/: bottle3.fbx
src/models/Can1/: can1.fbx  cantext.fbx
src/models/Can2/: can2.fbx
src/models/Can3/: can3.fbx
src/models/Can4/: can4.fbx
src/models/Diver/: diverBaked.fbx  diverSculpt.fbx
src/models/Fish/: fish.fbx
src/models/Sixpack1/: sixpack1.fbx
src/models/Sixpack2/: sixpack2.fbx
src/models/Sixpack3/: sixpack3.fbx
src/models/diver/: diver.fbx
src/shaders/: backgroundfrag.glsl  backgroundvert.glsl  collectiblefrag.glsl  collectiblevert.glsl  player_vert.glsl  playerfrag.glsl  playervert.glsl  testing_vertex.glsl
webserver/: config_backup.json  package-lock.json  server.js
webserver/public/: index.html  script.js
webserver/public/css/: gameOverScreen.css  gameRunningScreen.css  main.css  orientationPrompt.css  orientationPropmt.css  returningPlayerScreen.css  waitingScreen.css  welcomeScreen.css
webserver/public/js/: gameInformation.js  joystick.js  playerColours.js  script.js  sliderControls.js  timeBar.js
